--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
       <% if user_signed_in? %>
         <%= link_to 'Problems', problems_path %>
         <%= link_to 'Dashboard', dashboard_path %>
+        <% if current_user.admin? %>
+          <%= link_to 'Admin Problems', admin_problems_path, class: 'text-gray-700 hover:text-blue-600' %>
+          <%= link_to 'Admin Weeks', admin_weeks_path, class: 'text-gray-700 hover:text-blue-600' %>
+          <%= link_to 'Admin Users', admin_users_path, class: 'text-gray-700 hover:text-blue-600' %>
+        <% end %>
         <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign In', new_user_session_path %>
